更新游戏功能：优化游戏界面、添加新地图选择界面、完善登录系统

--- a/docs/参考代码.md
+++ b/docs/参考代码.md
@@ -1,208 +1,270 @@
- .health-bar__shield {
-    /* 蓝青渐变：从深到浅，模拟护盾充能感 */
-    background: linear-gradient(90deg, #1a365d 0%, #2a69ac 40%, #38bdf8 80%, #bae6fd 100%);
-    /* 科技感光影：外层光晕+内层通透感 */
-    box-shadow: 
-        inset 0 0 8px rgba(0, 0, 0, 0.5),   /* 内层暗纹 */
-        0 0 10px rgba(56, 189, 248, 0.6),   /* 外层淡蓝光晕 */
-        inset 0 1px 0 rgba(255, 255, 255, 0.2), /* 顶部高光，模拟护盾反光 */
-        inset 0 -1px 0 rgba(0, 0, 0, 0.3);  /* 底部暗纹，增加层次感 */
-    /* 半透明：体现护盾“非实体”的特性 */
-    opacity: 0.9;
-    /* 护盾消耗/恢复的过渡更丝滑 */
-    transition: width 0.6s cubic-bezier(0.2, 0.8, 0.2, 1), opacity 0.3s ease;
+ # 悬浮球功能模块代码
+
+## 1. 悬浮球核心组件
+
+### 1.1 floatingBall.tsx (核心实现)
+```typescript
+import { changeEvent } from '@/utils/handleDom';
+import { makeStringProp } from '@/utils/props';
+import { randomStr } from '@/utils/random';
+import { isMobile } from '@/utils/tools';
+import { defineComponent, ExtractPropTypes, onMounted, reactive, ref } from 'vue';
+import type { PropType } from 'vue';
+import { StyleType } from '@/utils/native-props';
+
+const classPrefix = `legendTD-floating-ball`;
+
+type StyleItem = 
+| '--initial-position-left'
+| '--initial-position-right'
+| '--initial-position-top'
+| '--initial-position-bottom'
+| '--z-index'
+
+export type FloatingBallEmit = {
+  /** 贴边时触发 isLeft: true 代表是左或上方向上贴边 */
+  onMagnetic?: (isLeft: boolean) => void
+  /** 位置偏移时触发 */
+  onOffsetChange?: (offset: {x: number, y: number}) => void
 }
 
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>游戏血条&能量条优化版</title>
-    <style>
-        /* 全局重置 & 基础样式 */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            background: #0a0a0a; /* 模拟游戏深色背景 */
-            min-height: 100vh;
-        }
+export const floatingBallProps = {
+  /** 可以进行拖动的方向，'xy' 表示自由移动 默认值xy */
+  axis: makeStringProp<'x' | 'y' | 'xy'>('xy'),
+  /** 自动磁吸到边界 */
+  magnetic: String as PropType<'x' | 'y'>,
+  style: Object as PropType<StyleType<StyleItem>>
+}
 
-        /* 通用进度条容器抽离 - 减少冗余 */
-        .progress-container {
-            position: fixed;
-            display: inline-block;
-            border-radius: calc(var(--height) / 2);
-            background: linear-gradient(145deg, #1a1a1a, #222);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6), 
-                        inset 0 1px 0 rgba(255, 255, 255, 0.1);
-            overflow: hidden;
-            border: 2px solid #555;
-        }
+export type FloatingBallProps = ExtractPropTypes<typeof floatingBallProps>
 
-        /* ---------------- 血条样式 ---------------- */
-        .health-bar {
-            --height: 50px;
-            height: var(--height);
-            width: 380px;
-            bottom: 50px;
+const FloatingBall = defineComponent({
+  props: floatingBallProps,
+  emits: ['onMagnetic', 'onOffsetChange'],
+  setup(props, ctx) {
+    const {emit, slots} = ctx
+    const idRef = ref(randomStr(classPrefix))
+    /** 悬浮球的宽，高，上下左右距离 */
+    const ball = reactive({w: 0, h: 0, r: 0, l: 0, t: 0, b: 0})
+    const touchRef = reactive({
+      startX: 0,
+      startY: 0,
+    })
+    const info = reactive({
+      x: 0,
+      y: 0,
+    })
+    const buttonRef = ref<HTMLDivElement | null>(null)
+    /** 动画时间 */
+    const duration = ref(0.1);
+  
+    const onTouchStart = (e: MouseEvent | TouchEvent) => {
+      e.stopPropagation()
+      const newE = changeEvent(e)
+      touchRef.startX = newE.clientX - info.x
+      touchRef.startY = newE.clientY - info.y
+      if(!isMobile()) {
+        document.addEventListener('mousemove', onTouchMove, true)
+        document.addEventListener('mouseup', onTouchEnd, true)
+      }
+      duration.value = 0.1
+    }
+    const onTouchMove = (e: MouseEvent | TouchEvent) => {
+      e.stopPropagation()
+      const newE = changeEvent(e)
+      const x = props.axis === 'y' ? 0 : newE.clientX - touchRef.startX
+      const y = props.axis === 'x' ? 0 : newE.clientY - touchRef.startY
+      info.x = x
+      info.y = y
+      emit('onOffsetChange', {x, y})
+    }
+    const onTouchEnd = (e: MouseEvent | TouchEvent) => {
+      e.stopPropagation()
+      if(!isMobile()) {
+        document.removeEventListener('mousemove', onTouchMove, true)
+        document.removeEventListener('mouseup', onTouchEnd, true)
+      }
+      const newE = changeEvent(e)
+      let x = props.axis === 'y' ? 0 : newE.clientX - touchRef.startX
+      let y = props.axis === 'x' ? 0 : newE.clientY - touchRef.startY
+      const {w, h, l, r, t, b} = ball
+      if (props.magnetic === 'x') {
+        const l_r = l < r ? l : r
+        const _v = l < r ? -1 : 1
+        const middleX = window.innerWidth / 2 - l_r - w / 2 // 中间分隔线的值
+        const distance = -1 * _v * (window.innerWidth - w - l_r * 2) // 另一边的位置
+        x = (Math.abs(x) > middleX) ? (x * _v < 0 ? distance : 0) : 0
+        emit('onMagnetic', x === 0 ? l < r : l > r)
+      } else if (props.magnetic === 'y') {
+        const l_r = t < b ? t : b
+        const _v = t < b ? -1 : 1
+        const middleX = window.innerHeight / 2 - l_r - h / 2 // 中间分隔线的值
+        const distance = -1 * _v * (window.innerHeight - h - l_r * 2) // 另一边的位置
+        y = (Math.abs(y) > middleX) ? (y * _v < 0 ? distance : 0) : 0
+        emit('onMagnetic', y === 0 ? t < b : t > b)
+      }
+      duration.value = 0.3
+      info.x = x
+      info.y = y
+    }
+  
+    onMounted(() => {
+      const init = () => {
+        const ballDom = document.querySelector(`.${idRef.value} .${classPrefix}-button`)
+        if(!ballDom) return
+        const ballInfo = ballDom.getBoundingClientRect()
+        ball.w = ballInfo.width
+        ball.h = ballInfo.height
+        ball.l = ballInfo.left
+        ball.r = window.innerWidth - ballInfo.right
+        ball.t = ballInfo.top
+        ball.b = window.innerHeight - ballInfo.bottom
+      }
+      setTimeout(() => {
+        init()
+      }, 10);
+    })
+  
+    const handleEvent = () => {
+      if(!isMobile()) {
+        return {
+          onMousedown: onTouchStart,
+          onMouseup: onTouchEnd,
         }
-        /* 左侧血条 */
-        .health-bar--left {
-            left: 100px;
+      } else {
+        return {
+          onTouchstart: onTouchStart,
+          onTouchmove: onTouchMove,
+          onTouchend: onTouchEnd,
+          onTouchcancel: onTouchEnd,
         }
-        /* 右侧血条 */
-        .health-bar--right {
-            right: 100px;
-            width: 400px; /* 保持原右侧尺寸 */
-        }
+      }
+    }
+  
+    return () => (
+      <div class={`${classPrefix} ${idRef.value}`} {...props}>
+        <div
+          ref={buttonRef}
+          class={`${classPrefix}-button`}
+          style={{ 
+            transitionDuration: duration.value + 's',
+            transform: `translate(${info.x}px, ${info.y}px)`
+           }}
+          {...handleEvent()}
+        >
+          {slots?.default && slots.default()}
+        </div>
+      </div>
+    )
 
-        /* 血条内层基础样式 */
-        .health-bar__inner {
-            position: absolute;
-            height: calc(var(--height) - 4px);
-            width: calc(100% - 4px);
-            top: 2px;
-            left: 2px;
-            border-radius: calc((var(--height) - 4px) / 2);
-            transition: width 0.8s cubic-bezier(0.4, 0, 0.2, 1); /* 更丝滑的过渡 */
-            box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.8);
-        }
+  }
+})
 
-        /* 常规血条渐变（层次感更强） */
-        .health-bar__hp {
-            background: linear-gradient(90deg, #4a0000 0%, #800000 30%, #cc0000 70%, #ff0000 100%);
-            box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.8), 
-                        0 0 8px rgba(180, 0, 0, 0.4),
-                        inset 0 1px 0 rgba(255, 255, 255, 0.15); /* 增加光泽感 */
-        }
+export default FloatingBall;
+```
 
-        /* 护盾样式（调整配色，更符合游戏护盾视觉） */
-        .health-bar__shield {
-            background: linear-gradient(90deg, #224488 0%, #3366aa 50%, #4488dd 100%);
-            box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.5), 
-                        0 0 8px rgba(60, 120, 200, 0.5),
-                        inset 0 1px 0 rgba(255, 255, 255, 0.1);
-        }
+### 1.2 floatingBall.less (样式定义)
+```less
+@class-prefix: ~'legendTD-floating-ball';
 
-        /* 低血量警示动画（<30% 触发） */
-        .health-bar__hp.low-hp {
-            animation: low-hp-flash 1s infinite alternate;
-        }
-        @keyframes low-hp-flash {
-            0% { opacity: 1; box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.8), 0 0 12px rgba(220, 0, 0, 0.6); }
-            100% { opacity: 0.7; box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.8), 0 0 18px rgba(255, 0, 0, 0.8); }
-        }
+.@{class-prefix} {
+  &-button {
+    position: fixed;
+    top: var(--initial-position-top);
+    right: var(--initial-position-right);
+    bottom: var(--initial-position-bottom);
+    left: var(--initial-position-left);
+    z-index: var(--z-index);
+    transition: transform ease-out 0.1s;
+    user-select: none;
+    touch-action: none;
+  }
+}
+```
 
-        /* ---------------- 能量条样式 ---------------- */
-        .energy-bar {
-            --height: 20px;
-            height: var(--height);
-            width: 400px;
-            bottom: 25px;
-            border-width: 1px;
-            box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5), 
-                        inset 0 1px 0 rgba(255, 255, 255, 0.1);
-        }
-        /* 左侧能量条 */
-        .energy-bar--left {
-            left: 100px;
-        }
-        /* 右侧能量条 */
-        .energy-bar--right {
-            right: 100px;
-        }
+### 1.3 index.tsx (组件导出)
+```typescript
+import './floatingBall.less'
+import FloatingBall from './floatingBall'
+export type { FloatingBallProps } from './floatingBall'
 
-        /* 能量条内层 */
-        .energy-bar__inner {
-            position: absolute;
-            height: calc(var(--height) - 4px);
-            top: 2px;
-            width: 0;
-            border-radius: calc((var(--height) - 4px) / 2);
-            transition: width 0.5s ease;
-            background: linear-gradient(90deg, #00cccc 0%, #00e5e5 50%, #00ffff 100%); /* 更细腻的渐变 */
-            box-shadow: 0 0 6px rgba(0, 255, 255, 0.5), 
-                        inset 0 0 3px rgba(0, 255, 255, 0.3),
-                        inset 0 1px 0 rgba(255, 255, 255, 0.2); /* 增加光泽 */
-        }
+export default FloatingBall
+```
 
-        /* 能量流动基础动画 */
-        .energy-bar__inner.flow {
-            animation: energy-flow 2s infinite ease-in-out;
-        }
-        @keyframes energy-flow {
-            0%, 100% { 
-                box-shadow: 0 0 6px rgba(0, 255, 255, 0.5), 
-                            inset 0 0 3px rgba(0, 255, 255, 0.3); 
-            }
-            50% { 
-                box-shadow: 0 0 12px rgba(0, 255, 255, 0.7), 
-                            inset 0 0 5px rgba(0, 255, 255, 0.5); 
-            }
-        }
+## 2. 依赖的工具函数
 
-        /* 满能量特效（更炫酷的光晕+闪烁） */
-        .energy-bar.full .energy-bar__inner {
-            background: linear-gradient(90deg, #00ffcc 0%, #00ffff 50%, #66ffff 100%);
-            animation: energy-ready 0.8s infinite alternate;
-        }
-        @keyframes energy-ready {
-            0% { 
-                box-shadow: 0 0 10px rgba(0, 255, 255, 0.8), 
-                            0 0 20px rgba(0, 255, 255, 0.6); 
-            }
-            100% { 
-                box-shadow: 0 0 20px rgba(0, 255, 255, 1), 
-                            0 0 30px rgba(0, 255, 255, 0.8),
-                            0 0 40px rgba(255, 255, 0, 0.5); 
-            }
-        }
-    </style>
-</head>
-<body>
-    <!-- 左侧血条（80%血量） -->
-    <div class="progress-container health-bar health-bar--left">
-        <div class="health-bar__inner health-bar__hp" style="width: 80%;"></div>
+### 2.1 handleDom.ts (事件处理)
+```typescript
+export const changeEvent = (event: MouseEvent | TouchEvent) => {
+  // changedTouches 是 touchEnd 的值
+  return (
+    (event as TouchEvent)?.touches?.[0] ??
+    (event as TouchEvent)?.changedTouches?.[0] ??
+    (event as MouseEvent)
+  );
+};
+```
+
+### 2.2 props.ts (属性定义)
+```typescript
+export const makeStringProp = <T>(defaultVal: T) => ({
+  type: String as unknown as PropType<T>,
+  default: defaultVal,
+});
+```
+
+### 2.3 random.ts (随机字符串生成)
+```typescript
+export const randomStr = (v?: string) => `${v ? v + '-' : ''}${Math.ceil(Math.random() * 10e5).toString(36)}-${Date.now().toString(36)}`;
+```
+
+### 2.4 tools.ts (设备检测)
+```typescript
+export function isMobile() {
+  return navigator.userAgent.match(/(phone|pad|pod|iPhone|iPod|ios|iPad|Android|Mobile|BlackBerry|IEMobile|MQQBrowser|JUC|Fennec|wOSBrowser|BrowserNG|WebOS|Symbian|Windows Phone)/i)
+}
+```
+
+### 2.5 native-props.ts (样式类型)
+```typescript
+export type StyleType<S extends string = never> = CSSProperties & Partial<Record<S, string>>
+```
+
+## 3. 使用示例
+
+### 3.1 userBall.vue (游戏中的悬浮球应用)
+```vue
+<template>
+  <FloatingBall
+    magnetic="x"
+    :style="floatingBallStyle"
+    @on-offset-change="status = 0"
+    @on-magnetic="onMagnetic"
+  >
+    <div class="ball-wrap">
+      <!-- 悬浮球内容 -->
     </div>
+  </FloatingBall>
+</template>
 
-    <!-- 右侧血条（25%血量 + 护盾） -->
-    <div class="progress-container health-bar health-bar--right">
-        <div class="health-bar__inner health-bar__hp low-hp" style="width: 25%;"></div>
-        <!-- 护盾层（可叠加） -->
-        <div class="health-bar__inner health-bar__shield" style="width: 40%;"></div>
-    </div>
+<script setup lang='ts'>
+import FloatingBall from '@/components/floatingBall';
+// ... 其他代码
+</script>
+```
 
-    <!-- 左侧能量条（70%能量） -->
-    <div class="progress-container energy-bar energy-bar--left">
-        <div class="energy-bar__inner flow" style="width: 70%;"></div>
-    </div>
+## 4. 功能特点
 
-    <!-- 右侧能量条（100%能量 + 满能量特效） -->
-    <div class="progress-container energy-bar energy-bar--right full">
-        <div class="energy-bar__inner flow" style="width: 100%;"></div>
-    </div>
+1. **拖拽功能**：支持自由拖拽和指定方向拖拽(x/y/xy)
+2. **磁吸边界**：自动吸附到屏幕左右或上下边界
+3. **响应式设计**：适配移动端和桌面端
+4. **事件回调**：提供贴边和位置变化的事件监听
+5. **可定制样式**：通过CSS变量自定义初始位置和层级
+6. **触摸支持**：同时支持鼠标和触摸操作
 
-    <!-- 测试交互：点击页面修改血条/能量条数值 -->
-    <script>
-        // 简单交互演示：点击页面随机修改血条和能量条数值
-        document.addEventListener('click', () => {
-            // 随机左侧血条数值（0-100%）
-            const leftHp = Math.floor(Math.random() * 101);
-            const leftHpEl = document.querySelector('.health-bar--left .health-bar__hp');
-            leftHpEl.style.width = `${leftHp}%`;
-            leftHpEl.classList.toggle('low-hp', leftHp < 30);
+## 5. 技术栈
 
-            // 随机右侧能量条数值（0-100%）
-            const rightEnergy = Math.floor(Math.random() * 101);
-            const rightEnergyEl = document.querySelector('.energy-bar--right .energy-bar__inner');
-            const rightEnergyContainer = document.querySelector('.energy-bar--right');
-            rightEnergyEl.style.width = `${rightEnergy}%`;
-            rightEnergyContainer.classList.toggle('full', rightEnergy === 100);
-        });
-    </script>
-</body>
-</html>
+- Vue 3 Composition API
+- TypeScript
+- Less
+- 原生DOM操作和事件处理
